--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "scripts": {
     "test": "npm run eslint && npm run coverage",
+    "dev": "nodemon npm run start",
     "coverage": "npm run clean && NODE_ENV=test nyc mocha",
     "eslint": "eslint src/. test/. --config .eslintrc.json --fix",
     "start": "node src/",
