--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@feathersjs/express": "^1.3.0",
     "@feathersjs/feathers": "^3.3.0",
     "@feathersjs/socketio": "^3.2.8",
-    "aimlinterpreter": "^0.1.7",
+    "aimlinterpreter": "git+https://github.com/raethlein/AIML.js.git",
     "compression": "^1.7.3",
     "cors": "^2.8.5",
     "feathers-nedb": "^4.0.0",
